# GenerativeModels

./: .deepsource.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements-min.txt  requirements.txt  runtests.sh  setup.cfg  setup.py
.github/workflows/: pythonapp-min.yml
generative/: __init__.py  version.py
generative/engines/: __init__.py  prepare_batch.py  trainer.py
generative/inferers/: __init__.py  inferer.py
generative/losses/: __init__.py  adversarial_loss.py  kld_loss.py  perceptual.py  spectral_loss.py
generative/metrics/: __init__.py  fid.py  mmd.py  ms_ssim.py  ssim.py
generative/networks/blocks/: __init__.py  encoder_modules.py  residual_unit.py  selfattention.py  spade_norm.py  transformerblock.py
generative/networks/layers/: RPE.py  __init__.py  vector_quantizer.py
generative/networks/nets/: __init__.py  autoencoderkl.py  autoregressive_transformer.py  cdpm.py  controlnet.py  ddpm_model.py  diffusion_model_encoder.py  diffusion_model_unet.py  dit.py  hagan.py  latent_diffusion_model.py  patchgan_discriminator.py  spade_autoencoderkl.py  spade_diffusion_model_unet.py  spade_network.py  transformer.py  vqvae.py
generative/networks/schedulers/: __init__.py  ddim.py  ddpm.py  pndm.py  scheduler.py
generative/schedulers/: __init__.py  ddim.py  ddpm.py  pndm.py
generative/utils/: __init__.py  component_store.py  enums.py  misc.py  ordering.py
model-zoo/: README.md
model-zoo/models/brain_image_synthesis_latent_diffusion_model/: large_files.yml
model-zoo/models/cxr_image_synthesis_latent_diffusion_model/: large_files.yml
tests/: README.md  min_tests.py  test_adversarial.py  test_autoencoderkl.py  test_autoregressive_transformer.py  test_component_store.py  test_compute_fid_metric.py  test_compute_mmd_metric.py  test_compute_ms_ssim_metric.py  test_compute_multiscalessim_metric.py  test_controlnet.py  test_controlnet_inferers.py  test_ddim.py  test_diffusion_inferer.py  test_diffusion_model_unet.py  test_diffusion_sampling_inferer.py  test_dit.py  test_dropout.py  test_encoder_modules.py  test_integration_workflows_adversarial.py  test_latent_diffusion_inferer.py  test_misc.py  test_ordering.py  test_patch_gan.py  test_perceptual_loss.py  test_scheduler_ddim.py  test_scheduler_ddpm.py  test_scheduler_pndm.py  test_selfattention.py  test_spade_autoencoderkl.py  test_spade_diffusion.py  test_spade_diffusion_model_unet.py  test_spade_vaegan.py  test_spectral_loss.py  test_transformer.py  test_vector_quantizer.py  test_vqvae.py  test_vqvaetransformer_inferer.py  utils.py
tutorials/: README.md  Untitled.ipynb
tutorials/anomaly_detection/: 2d_classifierfree_guidance_anomalydetection_tutorial.ipynb  2d_classifierfree_guidance_anomalydetection_tutorial.py  load_2d_brats.ipynb
tutorials/anomaly_detection/classifier_guidance_anomalydetection/: anomalydetection_tutorial_classifier_guidance.py
tutorials/anomalydetection/segmentation/: segmentation_tutorial.ipynb  segmentation_tutorial.py
tutorials/generative/2d_autoencoderkl/: 2d_autoencoderkl_tutorial.ipynb  2d_autoencoderkl_tutorial.py
tutorials/generative/2d_controlnet/: 2d_controlnet.ipynb  2d_controlnet.py
tutorials/generative/2d_ddpm/: 2d_ddpm_compare_schedulers.ipynb  2d_ddpm_compare_schedulers.py  2d_ddpm_inpainting.ipynb  2d_ddpm_inpainting.py  2d_ddpm_tutorial.ipynb  2d_ddpm_tutorial.py  2d_ddpm_tutorial_ignite.ipynb  2d_ddpm_tutorial_ignite.py  2d_ddpm_tutorial_v_prediction.ipynb  2d_ddpm_tutorial_v_prediction.py  2d_ensemble_expert_denoisers_tutorial.ipynb  2d_ensemble_expert_denoisers_tutorial.py  draft_tutorial.py
tutorials/generative/2d_diffusion_autoencoder/: 2d_diffusion_autoencoder_tutorial.ipynb  2d_diffusion_autoencoder_tutorial.py
tutorials/generative/2d_ldm/: 2d_finetuning_stable_diffusion.ipynb  2d_finetuning_stable_diffusion.py  2d_ldm_tutorial.ipynb  2d_ldm_tutorial.py
tutorials/generative/2d_spade_gan/: 2d_spade_vae.ipynb  2d_spade_vae.py
tutorials/generative/2d_spade_ldm/: 2d_spade_ldm.ipynb  2d_spade_ldm.py
tutorials/generative/2d_stable_diffusion_v2_super_resolution/: 2d_stable_diffusion_v2_super_resolution.ipynb  2d_stable_diffusion_v2_super_resolution.py
tutorials/generative/2d_super_resolution/: 2d_stable_diffusion_v2_super_resolution-lightning.ipynb  (+3 more)
(+81 files in other folders)
